# erc20-substreams

./: Cargo.toml  Makefile  README.md  rust-toolchain.toml  schema.sql  substreams.yaml
.github/workflows/: ci.yml  substreams.yml
src/: lib.rs  sinks.rs
